--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ body {
 <p>&nbsp;</p>
 <p align="left"><h2><em>Vasakul on lingid linnadele, mida soovitame külastada.</em></h2></p>
 
-<p><a href="Juhised.html"> <h2> LOE! </h2> </a></p>
+<p><a href="juhised.html"> <h2> LOE! </h2> </a></p>
 <p><a href="Marsruute.html"> <h2> Kuhu? </h2> </a></p>
 
 
