--- a/soovid.html
+++ b/soovid.html
@@ -5,7 +5,8 @@
 <title>Eestimaa tuur - Erisoovid</title>
 <link href="layout.css" rel="stylesheet" type="text/css" />
 <style type="text/css">
-<!--
+
+
 body {
 	margin-left: 5mm;
 	margin-top: 5mm;
@@ -80,6 +81,7 @@ body {
      </p>
 
 <input value="Saada" name="saada" type="submit" >
+<input type="reset" name="reset" value="Tühista">
 </form>
 <p>&nbsp;</p>
 </div>
